<resources>
    <string name="app_name">Blood Bank</string>
    <string name="about">About</string>
    <string name="skip">skip</string>
    <string name="phone_num">Phone Number</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="remmberme">remember me</string>
    <string name="login">Login</string>
    <string name="signin">Signin</string>
    <string name="create_new_account">Create New Account</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="blood_type">Blood Type</string>
    <string name="last_date_of_donation">Last date Of Donation</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="change_password_code">Change password code</string>
    <string name="validation_code">Validation code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="signup">Singnup</string>
    <string name="menu_1">Profile</string>
    <string name="menu_2">Notification settings</string>
    <string name="menu_3">Favorite</string>
    <string name="menu_4">Home Page</string>
    <string name="menu_5">Instructions</string>
    <string name="menu_6">Connect us</string>
    <string name="menu_7">About us</string>
    <string name="menu_8">Rating</string>
    <string name="menu_9">Log Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enter_word_search">Search</string>
    <string name="posts">Posts</string>
    <string name="donation">Donations</string>
    <string name="user_age">Age</string>
    <string name="name_of_hosiptal">Hosiptal</string>
    <string name="name_of_hospital">Name Of Hospital</string>
    <string name="nots">Nots</string>
    <string name="patient_name">Patient Name:</string>
    <string name="hosiptal_name">Hospital :</string>
    <string name="city_name">City:</string>
    <string name="details">Details</string>
    <string name="call">Call</string>
    <string name="choose_gonvertment">Choose Government</string>
    <string name="gonvertment">Government</string>
    <string name="choose_city">Choose City</string>
    <string name="title">Title</string>
    <string name="massage">Massage</string>
    <string name="privcy">© 2019 Ipda3 Tec All Rights Reserved</string>
    <string name="connectus">Connect Us</string>


    <!--<string name="google_maps_key">AIzaSyB0DeVNHbYX8QjHqhmaXKXlZTmlXXqQfmU</string>-->
    <string name="choose_location">Choose Location</string>
    <string name="name">Name :</string>
    <string name="age">Age :</string>
    <string name="bloodtype">Blood Type :</string>
    <string name="no_of_package">Number Of Package :</string>
    <string name="hosiptal_address">Hospital Address :</string>
    <string name="phonenum">Phone Number :</string>
    <string name="bt1">+A</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="GPSAlertDialogTitle">OpenGps</string>
    <string name="GPSAlertDialogMessage">Plaese Wait..</string>
    <string name="title_activity_maps">Map</string>

    <string name="num_of_package">Number Of Package</string>
    <string name="notification_title">Find Someone newer you</string>
    <string name="notification_title1">Find Someone newer you</string>

    <string-array name="package_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
