<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_1"
            android:checked="true"/>
        <item
            android:id="@+id/nav_notification_settings"
            android:icon="@drawable/notification"
            android:title="@string/menu_2"
            />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/favorite"
            android:title="@string/menu_3" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_4" />
        <item
            android:id="@+id/nav_instructions"
            android:icon="@drawable/instructions"
            android:title="@string/menu_5" />
        <item
            android:id="@+id/nav_connect_us"
            android:icon="@drawable/connect_us"
            android:title="@string/menu_6" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/menu_7" />
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/rating"
            android:title="@string/menu_8" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_9" />
    </group>


</menu>
