<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.fragment.UserCycleFragment.ForgetPasswordStep2Fragment">

    <ImageView
        android:id="@+id/fragment_forget_password_step2_logo"
        android:layout_width="@dimen/dim_20xl"
        android:layout_height="@dimen/dim_20xl"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dim_marg_l"
        android:src="@drawable/logo" />
    <TextView
        android:id="@+id/fragment_forget_password_step2_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password_code"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_size_m"
        android:layout_marginTop="@dimen/dim_marg_l"
        android:layout_below="@id/fragment_forget_password_step2_logo" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/fragment_forget_password_step2_validation_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_marg"
        android:layout_marginStart="@dimen/dim_marg_l"
        android:layout_marginEnd="@dimen/dim_marg_l"
        android:padding="@dimen/dim_m"
        android:layout_below="@id/fragment_forget_password_step2_textview"
        android:hint="@string/validation_code"
        android:background="@drawable/shap_ed"
        android:inputType="phone"
        android:textSize="@dimen/txt_size_l" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/fragment_forget_password_step2_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_marg"
        android:layout_marginStart="@dimen/dim_marg_l"
        android:layout_marginEnd="@dimen/dim_marg_l"
        android:padding="@dimen/dim_m"
        android:layout_below="@id/fragment_forget_password_step2_validation_code"
        android:hint="@string/new_password"
        android:background="@drawable/shap_ed"
        android:inputType="phone"
        android:textSize="@dimen/txt_size_l" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/fragment_forget_password_step2_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_marg"
        android:layout_marginStart="@dimen/dim_marg_l"
        android:layout_marginEnd="@dimen/dim_marg_l"
        android:padding="@dimen/dim_m"
        android:layout_below="@id/fragment_forget_password_step2_new_password"
        android:hint="@string/confirm_new_password"
        android:background="@drawable/shap_ed"
        android:inputType="phone"
        android:textSize="@dimen/txt_size_l" />



    <Button
        android:id="@+id/fragment_forget_password_step2_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_marg_l"
        android:layout_below="@id/fragment_forget_password_step2_confirm_new_password"
        android:background="@color/login_bnt"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_size_l" />

</RelativeLayout>