<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dim_10xl"
    android:layout_marginTop="@dimen/dim_m"
    android:layout_marginStart="@dimen/dim_m"
    android:layout_marginEnd="@dimen/dim_m"
    android:background="@drawable/donation_background"
    app:cardElevation="@dimen/dim_m">


 <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:weightSum="10"
     android:background="@drawable/donation_background"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/fragment_request_donation_bloodtype_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="start"
        android:src="@drawable/bllodtype_image"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_marginStart="@dimen/dim_2xl"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hosiptal_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_name" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_marginStart="@dimen/dim_2xl"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_request_donation_patient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_name" />

        <TextView
            android:id="@+id/fragment_donation_request_hospital_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hosiptal_name"
            />


        <TextView
            android:id="@+id/fragment_donation_request_city_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_name" />

    </LinearLayout>

     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="3"
         android:layout_marginStart="@dimen/dim_2xl"
         android:orientation="vertical">

         <Button
             android:id="@+id/fragment_donation_request_details"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dim_3xl"
             android:background="@color/gray"
             android:text="@string/details" />

         <Button
             android:id="@+id/fragment_donation_request_call"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dim_3xl"
             android:layout_marginTop="@dimen/dim_marg"
             android:background="@color/login_bnt"
             android:textColor="@color/white"
             android:text="@string/call"
             android:paddingStart="@dimen/dim_marg"
             android:drawableStart="@drawable/ic_call_black_24dp" />

     </LinearLayout>

</LinearLayout>

</android.support.v7.widget.CardView>